@@ -235,6 +235,12 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 135.qsutil.c: use slog() function with varargs to replace all log functions
 136.todo-proc.c: use todo_log() function with varargs to log messages to
     qmail-send
+137.mail_acl.c: changed function out() to match function in qmail-smtpd
+138.smtpd.c: set remoteip variable before first use of logerr()
+129.smtpd.c: make logerr safe by checking for remoteip
+130.spf.c: documented macros
+131.spf.h: changed SPF_DEFEXP to use open-spf.org/Why
+132.uacl.c: out() changed to have varargs
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
